--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/vue-fontawesome": "^3.0.8",
+    "@tanstack/vue-query": "^5.74.7",
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
     "daisyui": "^4.12.2",
